# doby

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  conftest.py  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  render.yaml  setup_ws_test.py
authentication/: serializers.py  tasks.py  urls.py  views.py
bookings/: admin.py  apps.py  constants.py  models.py  serializers.py  signals.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_remove_booking_dog.py  0003_booking_pet.py  0004_alter_booking_owner_alter_booking_sitter.py  0005_remove_booking_bookings_bo_sitter__94c41f_idx_and_more.py  0006_remove_booking_bookings_bo_sitter__99c1e8_idx_and_more.py
bookings/tests/: factories.py  test_views.py
chats/: admin.py  constants.py  consumers.py  factories.py  middleware.py  models.py  routing.py  serializers.py  storages.py  tests.py  urls.py  utils.py  views.py
chats/migrations/: 0001_initial.py  0002_alter_chatroom_options.py  0003_message_media_file_message_message_type_and_more.py  0004_alter_message_sender.py
doby/: __init__.py  asgi.py  celery.py  env_interface.py  settings.py  settings_prod.py  urls.py  views.py  wsgi.py
nginx/: nginx.conf  nginx_prod.conf
pets/: admin.py  apps.py  constants.py  models.py  serializers.py  storages.py  urls.py  views.py
pets/migrations/: 0001_initial.py  0002_pet_delete_dog.py  0003_pet_breed_name_pet_height_pet_weight.py  0004_alter_pet_owner.py  0005_alter_pet_owner.py  (+3 more)
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
sitters/: admin.py  apps.py  models.py  paginators.py  serializers.py  urls.py  views.py
tests/: factories.py
users/: admin.py  models.py  serializers.py  storages.py  urls.py  views.py
utils/: file_type.py  mixins.py  storages.py  test_utils.py
(+20 files in other folders)
